tags/NHI1-0.11/theLink/libmsgque/msgque.h

struct MqS;
struct MqErrorS;
struct MqBufferLS;
struct MqBufferS;
struct MqConfigS;
typedef unsigned char MQ_BOL;
typedef signed int MQ_INT;
typedef int MQ_SIZE;
typedef MQ_PTRB *MQ_PTR;
typedef MQ_STRB const * MQ_CST;
enum MqErrorE {
  MQ_OK		= 0,		
  MQ_CONTINUE	= 1,            
  MQ_ERROR	= 2,            
};
struct MqLinkS {
  struct MqSendS    * send;	    
  struct MqReadS    * read;	    
  struct MqIoS	    * io;	    
  struct MqBufferLS * alfa;	    
  MQ_SIZE   ctxId;		    
  struct MqS *ctxIdP;		    
  struct pTokenS * srvT;	    
  MQ_CST targetIdent;		    
  struct MqCacheS * readCache;	    
  struct {
    MQ_BOL endian	      : 1 ; 
    MQ_BOL onCreateStart      : 1 ; 
    MQ_BOL onCreateEnd	      : 1 ; 
    MQ_BOL onDelete	      :	1 ; 
    MQ_BOL onShutdown	      :	1 ; 
    MQ_BOL prepareDone	      :	1 ; 
    MQ_BOL doFactoryCleanup   :	1 ; 
    MQ_BOL flagServerSetup    :	1 ; 
    MQ_BOL isWORKER	      :	1 ; 
    MQ_BOL isConnected	      : 1 ; 
  } bits;
  MQ_SIZE   ctxIdR;		    
  MQ_SIZE   ctxIdZ;		    
  struct MqS ** ctxIdA;		    
  struct MqTransS * trans;	    
  MQ_HDL _trans;		    
  struct pChildS * childs;	    
  struct pChildS * self;	    
  struct MqLinkSlaveS * slave;	    
};
struct MqErrorS {
  enum MqErrorE code;		
  struct MqBufferS * text;      
  MQ_INT num;	                
  MQ_BOL append;		
  struct MqS * errctx;		
};
typedef enum MqErrorE ( MQ_DECL
  *MqCreateF
) (
  struct MqS  *,		    
  struct MqBufferLS **		    
) __attribute__((nonnull (1)));
enum MqStatusIsE {
  MQ_STATUS_IS_INITIAL = 0,	    
  MQ_STATUS_IS_DUP     = 1<<0,	    
  MQ_STATUS_IS_THREAD  = 1<<1,	    
  MQ_STATUS_IS_FORK    = 1<<2,	    
  MQ_STATUS_IS_SPAWN   = 1<<3,	    
};
struct MqConfigS {
  MQ_BOL isSilent;
  MQ_BOL isString;
  enum MqStartE startAs;
  MQ_STR name;
  MQ_STR srvname;
  MQ_INT debug;
  struct MqS * parent;
  struct MqS * master;
  MQ_SIZE master_id;
  MQ_BOL ignoreThread;
  MQ_BOL ignoreSpawn;
  MQ_BOL ignoreFork;
  struct MqIoConfigS io;
};
struct MqSetupS {
  struct MqFactoryS* factory;
  struct MqLinkSetupS Child;
  struct MqLinkSetupS Parent;
  struct MqCallbackS BgError;
  MQ_BOL isServer;
  struct MqCallbackS ServerSetup;
  struct MqCallbackS ServerCleanup;
  struct MqCallbackS Event;
  MqSetupF fThreadInit;
  MqSetupF fForkInit;
  MqSetupF fSpawnInit;
  MqExitF fProcessExit;
  MqExitF fThreadExit;
  MqHelpF fHelp;
  MQ_BOL ignoreExit;
};
struct MqS {
  MQ_INT signature;		    
  MQ_PRIVATE_CONFIG_CONST
    struct MqConfigS config;	    
  struct MqSetupS setup;	    
  struct MqErrorS error;	    
  struct MqLinkS link;		    
  struct MqBufferS * temp;	    
  enum MqStatusIsE statusIs;	    
  struct {
    MQ_BOL MqContextDelete_LOCK :1; 
    MQ_BOL MqContextFree_LOCK	:1; 
    MQ_BOL EventProc_LOCK	:1; 
    MQ_BOL onExit	        :1; 
  } bits;			    
  MQ_PTR threadData;		    
  MQ_PTR self;			    
  MQ_SIZE contextsize;		    
  MQ_INT refCount;		    
  struct MqGcS *gc;		    
  MQ_SIZE gcid;			    
  MQ_CST caller;		    
};
MQ_EXTERN enum MqErrorE MQ_DECL MqLinkCreate (
  struct MqS  * const ctx,
  struct MqBufferLS ** args
);
MQ_EXTERN enum MqErrorE MQ_DECL MqLinkCreateChild (
  struct MqS * const ctx,
  struct MqS * const parent,
  struct MqBufferLS ** args
);
MQ_EXTERN enum MqErrorE MQ_DECL MqLinkDefault (
  struct MqS  * const ctx,
  struct MqBufferLS ** args
);
MQ_EXTERN void MQ_DECL MqLinkDelete (
  struct MqS * const ctx
);
MQ_EXTERN int MQ_DECL MqLinkIsConnected (
  struct MqS const * const ctx
) __attribute__((nonnull));
MQ_EXTERN struct MqS * MQ_DECL MqLinkGetParent (
  struct MqS const * const ctx
) __attribute__((nonnull));
MQ_EXTERN int MQ_DECL MqLinkIsParent (
  struct MqS const * const ctx
) __attribute__((nonnull));
MQ_EXTERN MQ_SIZE MQ_DECL MqLinkGetCtxId (
  struct MqS const * const ctx
) __attribute__((nonnull));
struct MqBufferS {
  MQ_INT signature;		
  struct MqS *context;		
  MQ_BIN data;                  
  MQ_SIZE size;                 
  MQ_SIZE cursize;              
  MQ_SIZE numItems;             
  union MqBufferU cur;		
  enum MqAllocE alloc;		
  enum MqTypeE type;            
  MQ_BINB bls[MQ_BLS_SIZE+1];
};
struct MqBufferLS {
  MQ_SIZE size;                 
  MQ_SIZE cursize;              
  struct MqBufferS ** data;	
  struct MqBufferS ** cur;	
} ;
MQ_EXTERN struct MqBufferLS * MQ_DECL MqBufferLCreate (
  MQ_SIZE const size
);
MQ_EXTERN void MQ_DECL
MqBufferLAppendC (
  struct MqBufferLS * const bufL,
  MQ_CST const val
);